--- a/styles/style.css
+++ b/styles/style.css
@@ -9,23 +9,371 @@
   font-family: 'Helvetica Neue', Arial, sans-serif;
 }
 
+.logo {
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+.link {
+  text-decoration: none;
+}
+
 .header {
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
   /* выше установили ограничения для секции */
+  background-color: #f2f2f2;
+  position: relative;
+  overflow: hidden;
 }
 
-/* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
+.logo_place_header {
+  width: 183px;
+  height: 32px;
+  background-image: url('../images/logo_place_header.svg');
+  position: absolute;
+  top: 30px;
+  left: 64px;
+}
+
+.header__title {
+  margin: 0;
+  width: 730px;
+  height: 100%;
+  font-size: 102px;
+  line-height: 96px;
+  font-weight: 600;
+  padding: 0 0 0 64px;
+  display: flex;
+  align-items: center;
+  position: relative;
+  z-index: 2;
+}
+
+.header__subtitle {
+  margin: 0;
+  width: 388px;
+  font-size: 18px;
+  line-height: 25px;
+  font-weight: 400;
+  position: absolute;
+  bottom: 30px;
+  left: 64px;
+  z-index: 5;
+}
+
+.header__link {
+  color: #2f80ed;
+}
+
+.header__main-illustration {
+  width: 765px;
+  height: 608px;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  background: url('../images/header-image.png') 0 0/cover no-repeat;
+  z-index: 1;
+}
+
 .header__square-pic {
-  height: 568px;
+  background-color: #2f80ed;
   width: 568px;
+  height: 568px;
+  position: absolute;
+  right: 0;
+  top: 64px;
 }
 
-/* и элемента с модификатором вида ключ-значение */
+.description {
+  margin: 100px 0 0 0;
+  display: flex;
+  justify-content: center;
+}
+
+.two-columns {
+  width: 80%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.two-columns__brief {
+  width: 175px;
+}
+
+.two-columns__brief_title {
+  margin: 0;
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: 400;
+  color: #2f80ed;
+}
+
+.two-columns__main-text {
+  width: 80%;
+  min-width: 784px;
+}
+
+.two-columns__paragraph {
+  margin: 0;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: 400;
+  margin: 0 0 30px 0;
+}
+
+.two-columns__paragraph:last-child {
+  margin: 0;
+}
+
+.two-columns__span-accent {
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: 600;  
+}
+
+.digits {
+  margin: 100px 0 0 0;
+}
+
+.section-title {
+  margin: 0 auto;
+  text-align: center;
+}
+
+.digits__section-title_value {
+  width: 60%;
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: 600;
+}
+
+.section-subtitle {
+  margin: 0 auto;
+  text-align: center;
+}
+
+.digits__section-subtitle_value {
+  margin-top: 20px;
+  width: 60%;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: 400;
+}
+
+.table {
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding-left: 0;
+}
+
+.digits__table_value {
+  width: 1100px;
+}
+
+.table__cell {
+  list-style: none;
+}
+
+.digits_table-cell_value {
+  width: 250px;
+  margin-top: 60px;
+}
+
+.table__heading {
+  margin: 0;
+}
+
+.digits_table-heading_value {
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: 600;
+  margin-bottom: 20px;
+}
+
+.table__text {
+  margin: 0;
+}
+
+.digits_table-text_value {
+  margin-bottom: 20px;
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: 400;
+}
+
+.digits_table-text_value:last-child {
+  margin: 0;
+}
+.feynman {
+  margin: 100px 0 0 0;
+  min-height: 890px;
+  background: #f2f2f2 url('../images/feynman.png') 0 100% no-repeat;
+  position: relative;
+}
+
+.feynman__title {
+  width: 648px;
+  margin: 100px auto 70px;
+  text-align: center;
+  line-height: 1.15;
+  font-size: 120px;
+  font-weight: 600;
+}
+
+.feynman__subtitle {
+  margin: 0;
+  text-align: center;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: 400;  
+}
+
+.feynman__link {
+  color: #2f80ed;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: 400;
+  position: absolute;
+  top: 50%;
+  right: 48px;
+}
+
+.kaufman {
+  padding: 90px 0 90px 0;
+  background-color: #1f1f1f;
+  color: #fff;
+  position: relative;
+  overflow: hidden;
+}
+
+.kaufman__triangle {
+  width: 877px;
+  height: 877px;
+  background: url('../images/kaufman-triangle.svg')0 0/cover no-repeat;
+  position: absolute;
+  top: 0;
+  right: -210px;
+}
+
+.section-title_theme_dark {
+  width: 60%;
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: 600;
+  position: relative;
+  z-index: 1;
+}
+
+.section-subtitle_theme_dark {
+  margin-top: 20px;
+  width: 60%;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: 400;
+  position: relative;
+  z-index: 1;
+}
+
+.table_theme_dark {
+  width: 1100px;
+  position: relative;
+  z-index: 1;
+}
+
 .table__cell_theme_dark {
   width: 200px;
-  color: white;
   margin-right: 0;
   margin-top: 80px;
+}
+
+.table__heading_theme_dark {
+  margin-bottom: 20px;
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: 600;
+}
+
+.table__text_theme_dark {
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: 400;
+}
+
+.footer {
+  background-color: #1f1f1f;
+  color: #fff;
+  padding: 60px 0 40px 0;
+}
+
+.footer__columns {
+  width: 90%;
+  min-height: 350px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer__column {
+  display: flex;
+  flex-direction: column;
+}
+
+.footer__column_copyright {
+  flex-basis: 711px;
+  justify-content: space-between;
+}
+
+.logo_place_footer {
+  width: 183px;
+  height: 35px;
+  background-image: url('../images/logo_place_header.svg');
+}
+
+.footer__author {
+  margin: 0;
+  margin: 18px 0 18px 0;
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: 400;
+}
+
+.footer__column-heading {
+  margin: 0 0 20px 0;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: 600;
+}
+
+.footer__column-links {
+  margin: 0 0 16px 0;
+}
+
+.footer__column-link {
+  display: block;
+  color: #fff;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: 400;
+}
+
+.footer__social-icon {
+  background-repeat: no-repeat;
+  background-position: 0 2px;
+  padding: 0 0 0 26px;
+}
+
+.footer__social-icon_item1 {
+  background-image: url('../images/facebook_color_white.svg');
+}
+
+.footer__social-icon_item2 {
+  background-image: url('../images/vk_color_white.svg');
+}
+
+.footer__social-icon_item3 {
+  background-image: url('../images/instagram_color_white.svg');
 }
