--- a/styles/style.css
+++ b/styles/style.css
@@ -18,6 +18,10 @@
   text-decoration: none;
 }
 
+.link:hover {
+  color: #ff0000;
+}
+
 .header {
   height: 100vh;
   min-height: 600px;
@@ -39,7 +43,7 @@
 
 .header__title {
   margin: 0;
-  width: 730px;
+  max-width: 730px;
   height: 100%;
   font-size: 102px;
   line-height: 96px;
@@ -53,7 +57,7 @@
 
 .header__subtitle {
   margin: 0;
-  width: 388px;
+  max-width: 388px;
   font-size: 18px;
   line-height: 25px;
   font-weight: 400;
@@ -73,7 +77,6 @@
   position: absolute;
   bottom: 0;
   right: 0;
-  background: url('../images/header-image.png') 0 0/cover no-repeat;
   z-index: 1;
 }
 
@@ -100,9 +103,6 @@
 
 .two-columns__brief {
   width: 175px;
-}
-
-.two-columns__brief_title {
   margin: 0;
   line-height: 1.2;
   font-size: 18px;
@@ -139,9 +139,6 @@
 .section-title {
   margin: 0 auto;
   text-align: center;
-}
-
-.digits__section-title_value {
   width: 60%;
   line-height: 1.15;
   font-size: 60px;
@@ -151,9 +148,6 @@
 .section-subtitle {
   margin: 0 auto;
   text-align: center;
-}
-
-.digits__section-subtitle_value {
   margin-top: 20px;
   width: 60%;
   line-height: 34px;
@@ -167,56 +161,45 @@
   flex-wrap: wrap;
   justify-content: space-between;
   padding-left: 0;
-}
-
-.digits__table_value {
-  width: 1100px;
-}
-
-.table__cell {
+  max-width: 1100px;
   list-style: none;
 }
 
-.digits_table-cell_value {
+.table__cell {
   width: 250px;
   margin-top: 60px;
 }
 
 .table__heading {
-  margin: 0;
-}
-
-.digits_table-heading_value {
+  margin: 0 0 20px 0;
   line-height: 1.15;
   font-size: 24px;
   font-weight: 600;
-  margin-bottom: 20px;
 }
 
 .table__text {
   margin: 0;
-}
-
-.digits_table-text_value {
   margin-bottom: 20px;
   line-height: 1.2;
   font-size: 18px;
   font-weight: 400;
 }
 
-.digits_table-text_value:last-child {
+.table__text:last-child {
   margin: 0;
 }
+
 .feynman {
   margin: 100px 0 0 0;
+  padding: 100px 0 0 0;
   min-height: 890px;
   background: #f2f2f2 url('../images/feynman.png') 0 100% no-repeat;
   position: relative;
 }
 
 .feynman__title {
-  width: 648px;
-  margin: 100px auto 70px;
+  max-width: 648px;
+  margin: 0 auto 70px;
   text-align: center;
   line-height: 1.15;
   font-size: 120px;
@@ -252,54 +235,31 @@
 .kaufman__triangle {
   width: 877px;
   height: 877px;
-  background: url('../images/kaufman-triangle.svg')0 0/cover no-repeat;
+  background: url('../images/kaufman-triangle.svg') no-repeat;
+  background-size: cover;
   position: absolute;
   top: 0;
   right: -210px;
 }
 
 .section-title_theme_dark {
-  width: 60%;
-  line-height: 1.15;
-  font-size: 60px;
-  font-weight: 600;
   position: relative;
   z-index: 1;
 }
 
 .section-subtitle_theme_dark {
-  margin-top: 20px;
-  width: 60%;
-  line-height: 34px;
-  font-size: 24px;
-  font-weight: 400;
   position: relative;
   z-index: 1;
 }
 
 .table_theme_dark {
-  width: 1100px;
   position: relative;
   z-index: 1;
 }
 
 .table__cell_theme_dark {
   width: 200px;
-  margin-right: 0;
   margin-top: 80px;
-}
-
-.table__heading_theme_dark {
-  margin-bottom: 20px;
-  line-height: 1.15;
-  font-size: 24px;
-  font-weight: 600;
-}
-
-.table__text_theme_dark {
-  line-height: 1.2;
-  font-size: 18px;
-  font-weight: 400;
 }
 
 .footer {
@@ -309,8 +269,8 @@
 }
 
 .footer__columns {
+  min-height: 250px;
   width: 90%;
-  min-height: 350px;
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
@@ -321,7 +281,7 @@
   flex-direction: column;
 }
 
-.footer__column_copyright {
+.footer__column_content_copyright {
   flex-basis: 711px;
   justify-content: space-between;
 }
@@ -329,11 +289,10 @@
 .logo_place_footer {
   width: 183px;
   height: 35px;
-  background-image: url('../images/logo_place_header.svg');
+  background-image: url('../images/logo_place_footer.svg');
 }
 
 .footer__author {
-  margin: 0;
   margin: 18px 0 18px 0;
   line-height: 25px;
   font-size: 18px;
@@ -365,14 +324,14 @@
   padding: 0 0 0 26px;
 }
 
-.footer__social-icon_item1 {
+.footer__social-icon_name_facebook {
   background-image: url('../images/facebook_color_white.svg');
 }
 
-.footer__social-icon_item2 {
+.footer__social-icon_name_vk {
   background-image: url('../images/vk_color_white.svg');
 }
 
-.footer__social-icon_item3 {
+.footer__social-icon_name_instagram {
   background-image: url('../images/instagram_color_white.svg');
 }
