--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -7,3 +7,14 @@
   position: relative;
   overflow: hidden;
 }
+
+/*Подключаем синий квадрат через псевдоэлемент*/
+.header::before {
+  content: '';
+  background-color: #2f80ed;
+  width: 568px;
+  height: 568px;
+  position: absolute;
+  right: 0;
+  top: 64px;
+}
