--- a/blocks/kaufman/__triangle/kaufman__triangle.css
+++ b/blocks/kaufman/__triangle/kaufman__triangle.css
@@ -1,4 +1,6 @@
-.kaufman__triangle {
+/*Выключаем чтобы сделать через псевдоэлемент*/
+
+/* .kaufman__triangle {
   width: 877px;
   height: 877px;
   background: url('../../../images/kaufman-triangle.svg') no-repeat;
@@ -6,4 +8,4 @@
   position: absolute;
   top: 0;
   right: -210px;
-}
+} */
