--- a/blocks/kaufman/kaufman.css
+++ b/blocks/kaufman/kaufman.css
@@ -5,3 +5,14 @@
   position: relative;
   overflow: hidden;
 }
+/*Делаем синий треугольник через псевдоэлемент*/
+.kaufman::before {
+  content: '';
+  width: 877px;
+  height: 877px;
+  background: url('../../images/kaufman-triangle.svg') no-repeat;
+  background-size: cover;
+  position: absolute;
+  top: 0;
+  right: -210px;
+}
